I am dubbing this V1.2, I implemented our bang-bang control logic, redid the simulation listener file to account for the new control scheme as well. I also redid the parsing function that takes in the CFD data to better interpolate between points. This thing now actually works where you tell it an apoggee that is resonable and it will get there within 1-2 m. There are still alot of bugs regarding save states and running concurrent simulations but if run from a clean simulation this thing works properly